# fastapi-inertia

./: pyproject.toml
examples/react/: README.md  package.json  pyproject.toml  tailwind.config.js  vite.config.ts
examples/react-ssr/: README.md  bun.lockb  package.json  pyproject.toml  tailwind.config.js  vite.config.ts
examples/react-ssr/app/: inertia.py  main.py
examples/react-ssr/ui/: entry-client.tsx  entry-server.tsx  global.css  utils.ts
examples/react-ssr/ui/pages/: Index.tsx
examples/react/app/: inertia.py
examples/react/app/templates/: index.html
examples/react/ui/: main.tsx
examples/react/ui/pages/: About.tsx
inertia/: config.py  inertia.py  templating.py  utils.py
inertia/tests/: test_back_helper.py  test_external_redirect.py  test_first_request_returns_html.py  test_flash_message.py  test_lazy_prop.py  test_production_assets_prefix.py  test_pydantic_basemodel_are_encoded.py  test_request_with_headers_returns_json.py  test_returns_409_if_versions_do_not_match.py  test_returns_errors_when_invalid_data_is_sent.py  test_shared_data.py  test_ssr.py  utils.py
inertia/tests/templates/: test.html.j2
